[gd_scene load_steps=13 format=3 uid="uid://5u3n2uwkytcn"]

[ext_resource type="Script" uid="uid://cojjsqfgftwo3" path="res://scripts/scenes/game_scene.gd" id="1_sdya7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bg"]
bg_color = Color(0.08, 0.12, 0.1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.18, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.45, 0.8)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.18, 0.28, 0.22, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.7, 0.55, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.25, 0.38, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.9, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_overlay"]
bg_color = Color(0.02, 0.04, 0.03, 0.85)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_panel"]
bg_color = Color(0.08, 0.12, 0.1, 0.98)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.6, 0.45, 0.9)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pause_button"]
bg_color = Color(0.15, 0.22, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.48, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_win_overlay"]
bg_color = Color(0.02, 0.06, 0.03, 0.9)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_win_panel"]
bg_color = Color(0.06, 0.12, 0.08, 0.98)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.4, 0.8, 0.5, 0.95)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0.2, 0.6, 0.3, 0.4)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lose_overlay"]
bg_color = Color(0.06, 0.02, 0.02, 0.9)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lose_panel"]
bg_color = Color(0.1, 0.06, 0.06, 0.98)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.7, 0.3, 0.25, 0.95)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_color = Color(0.5, 0.15, 0.1, 0.4)
shadow_size = 25

[node name="GameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sdya7")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bg")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScorePanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="UI/ScorePanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ScorePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ScoreLabel" type="Label" parent="UI/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 22
text = "Score: 0"

[node name="TargetLabel" type="Label" parent="UI/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 0.85, 1)
theme_override_font_sizes/font_size = 16
text = "Target: 600"

[node name="Separator1" type="HSeparator" parent="UI/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RoundLabel" type="Label" parent="UI/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Rounds left: 3"

[node name="BlindLabel" type="Label" parent="UI/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Current Blind: 1"

[node name="Separator2" type="HSeparator" parent="UI/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ComboScoreLabel" type="Label" parent="UI/ScorePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 1.0, 0.7, 1)
theme_override_font_sizes/font_size = 15
text = "Combo: None (+0)"

[node name="ControlPanel" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="UI/ControlPanel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ControlPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DiscardsLabel" type="Label" parent="UI/ControlPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Discards: 5"
horizontal_alignment = 1

[node name="DrawButton" type="Button" parent="UI/ControlPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.9, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Select Tile"

[node name="PlayHandButton" type="Button" parent="UI/ControlPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.9, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Play Hand"

[node name="InventoryButton" type="Button" parent="UI/ControlPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.9, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.9, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Inventory"

[node name="OpenDiscardLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -248.0
offset_right = 60.0
offset_bottom = -228.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.7, 0.65, 0.8)
theme_override_font_sizes/font_size = 12
text = "Open Discard"
horizontal_alignment = 1

[node name="OpenDiscardContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -220.0
offset_right = 400.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="HintLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.85, 0.95, 0.9, 0.95)
theme_override_font_sizes/font_size = 16
text = "Select a tile to discard, or play your hand"
horizontal_alignment = 1

[node name="ScorePopup" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1.0, 0.95, 0.4, 1)
theme_override_colors/font_outline_color = Color(0.1, 0.15, 0.1, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
vertical_alignment = 1

[node name="HandLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -138.0
offset_right = 40.0
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.8, 0.9, 0.85, 0.9)
theme_override_font_sizes/font_size = 13
text = "Your Hand"
horizontal_alignment = 1

[node name="HandContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -115.0
offset_right = 500.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="PauseOverlay" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pause_overlay")

[node name="CenterContainer" type="CenterContainer" parent="PauseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PausePanel" type="PanelContainer" parent="PauseOverlay/CenterContainer"]
custom_minimum_size = Vector2(320, 380)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pause_panel")

[node name="MarginContainer" type="MarginContainer" parent="PauseOverlay/CenterContainer/PausePanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay/CenterContainer/PausePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="PauseOverlay/CenterContainer/PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 32
text = "‚è∏ PAUSED"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="PauseOverlay/CenterContainer/PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ButtonsContainer" type="VBoxContainer" parent="PauseOverlay/CenterContainer/PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ResumeButton" type="Button" parent="PauseOverlay/CenterContainer/PausePanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 1.0, 0.95, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
text = "‚ñ∂ Resume"

[node name="SaveButton" type="Button" parent="PauseOverlay/CenterContainer/PausePanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
text = "üíæ Save & Continue"

[node name="MainMenuButton" type="Button" parent="PauseOverlay/CenterContainer/PausePanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
text = "üè† Main Menu"

[node name="QuitButton" type="Button" parent="PauseOverlay/CenterContainer/PausePanel/MarginContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.6, 0.5, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
text = "‚úï Quit Game"

[node name="HintLabel" type="Label" parent="PauseOverlay/CenterContainer/PausePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.7, 0.65, 0.7)
theme_override_font_sizes/font_size = 12
text = "Press ESC to resume"
horizontal_alignment = 1

[node name="WinOverlay" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_win_overlay")

[node name="CenterContainer" type="CenterContainer" parent="WinOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinPanel" type="PanelContainer" parent="WinOverlay/CenterContainer"]
custom_minimum_size = Vector2(400, 420)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_win_panel")

[node name="MarginContainer" type="MarginContainer" parent="WinOverlay/CenterContainer/WinPanel"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="WinOverlay/CenterContainer/WinPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TrophyLabel" type="Label" parent="WinOverlay/CenterContainer/WinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1.0, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 52
text = "üèÜ"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="WinOverlay/CenterContainer/WinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1.0, 0.6, 1)
theme_override_font_sizes/font_size = 36
text = "BLIND CLEARED!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="WinOverlay/CenterContainer/WinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "Score: 0 / 0"
horizontal_alignment = 1

[node name="BonusLabel" type="Label" parent="WinOverlay/CenterContainer/WinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1.0, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "+$0 bonus"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="WinOverlay/CenterContainer/WinPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ContinueButton" type="Button" parent="WinOverlay/CenterContainer/WinPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 1.0, 0.95, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
text = "‚û° Continue to Shop"

[node name="LoseOverlay" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lose_overlay")

[node name="CenterContainer" type="CenterContainer" parent="LoseOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LosePanel" type="PanelContainer" parent="LoseOverlay/CenterContainer"]
custom_minimum_size = Vector2(400, 420)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lose_panel")

[node name="MarginContainer" type="MarginContainer" parent="LoseOverlay/CenterContainer/LosePanel"]
layout_mode = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="LoseOverlay/CenterContainer/LosePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SkullLabel" type="Label" parent="LoseOverlay/CenterContainer/LosePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.3, 0.25, 1)
theme_override_font_sizes/font_size = 52
text = "üíÄ"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="LoseOverlay/CenterContainer/LosePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.4, 0.35, 1)
theme_override_font_sizes/font_size = 36
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="LoseOverlay/CenterContainer/LosePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.8, 0.75, 1)
theme_override_font_sizes/font_size = 18
text = "Score: 0 / 0"
horizontal_alignment = 1

[node name="BlindLabel" type="Label" parent="LoseOverlay/CenterContainer/LosePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "Reached Blind: 1"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="LoseOverlay/CenterContainer/LosePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="RetryButton" type="Button" parent="LoseOverlay/CenterContainer/LosePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.85, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
text = "üîÑ Try Again"

[node name="MainMenuButton" type="Button" parent="LoseOverlay/CenterContainer/LosePanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_pause_button")
text = "üè† Main Menu"
